# prism

./: .gitignore  README.md  convert_generated_to_extracted.py  data_source.py  environment.yaml  generate.py  main.py  prism.py  prism_compare.py  prism_timeline.py  pyproject.toml  report.py  scraper.py  similarity.py  snoopy.py  topics.py  translator.py
core/: common.py  contra.py  data_source.py  report.py  similarity.py  snoopy.py  topics.py  translator.py
data/: sample_tweets.json
notebooks/: hello_BertTopic.ipynb  hello_deepeval.ipynb  hello_similarity.ipynb  hello_snoopy.ipynb  hello_translate.ipynb
